; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_mn.c_amdgpu_mn_read_lock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_mn.c_amdgpu_mn_read_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_mn = type { i32 }

@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amdgpu_mn*, i32)* @amdgpu_mn_read_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @amdgpu_mn_read_lock(%struct.amdgpu_mn* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.amdgpu_mn*, align 8
  %5 = alloca i32, align 4
  store %struct.amdgpu_mn* %0, %struct.amdgpu_mn** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load %struct.amdgpu_mn*, %struct.amdgpu_mn** %4, align 8
  %10 = getelementptr inbounds %struct.amdgpu_mn, %struct.amdgpu_mn* %9, i32 0, i32 0
  %11 = call i32 @down_read(i32* %10)
  br label %21

12:                                               ; preds = %2
  %13 = load %struct.amdgpu_mn*, %struct.amdgpu_mn** %4, align 8
  %14 = getelementptr inbounds %struct.amdgpu_mn, %struct.amdgpu_mn* %13, i32 0, i32 0
  %15 = call i32 @down_read_trylock(i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %12
  %18 = load i32, i32* @EAGAIN, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %3, align 4
  br label %22

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20, %8
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %17
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @down_read(i32*) #1

declare dso_local i32 @down_read_trylock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
